--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <script src='//code.jquery.com/jquery-1.7.2.min.js'></script>
         <script src='//localhost:3000/socket.io/socket.io.js'></script>
         <script>
-            var socket = io.connect('//localhost:3000');
+            //var socket = io.connect('//localhost:3000');
+            var socket = io.connect('http://twitterstream.azurewebsites.net/');
 
             socket.on('welcome', function(data) {
                 $('#messages').append('<li>' + data.message + '</li>');
