--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script src='//code.jquery.com/jquery-1.7.2.min.js'></script>
         <script src="//cdn.socket.io/socket.io-1.1.0.js"></script>
         <script>
+            console.log("Stream Started");
             //var socket = io.connect('//localhost:3000');
             var socket = io.connect('http://twitterstream.azurewebsites.net/');
 
