--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </script>
     </head>
     <body>
+        Twitter Stream WebSocket
         <ul id='messages'></ul>
     </body>
 </html>
