--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script>
             console.log("Stream Started");
             //var socket = io.connect('//localhost:3000');
-            var socket = io.connect('http://twitterstream.azurewebsites.net/');
+            var socket = io.connect('ws://twitterstream.azurewebsites.net/');
 
             socket.on('welcome', function(data) {
                 $('#messages').append('<li>' + data.message + '</li>');
