--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul id='messages'></ul>
 
         <script>
-            console.log("Stream Started");
+            //console.log("Stream Started");
             $('#messages').append('<li>Stream Started</li>');
             
             //var socket = io.connect('//localhost:3000');
