--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             //console.log("Stream Started");
             $('#messages').append('<li>Stream Started</li>');
             
-            //var socket = io.connect('//localhost:3000');
-            var socket = io.connect('ws://twitterstream.azurewebsites.net/');
+            var socket = io.connect('//localhost:3000');
+            //var socket = io.connect('ws://twitterstream.azurewebsites.net/');
             console.log(socket);
 
             socket.on('welcome', function(data) {
